Fix the close buttom alignment

--- a/web/components/thread/popup-list/index.module.scss
+++ b/web/components/thread/popup-list/index.module.scss
@@ -12,15 +12,18 @@
   border-top-left-radius: rem($border-radius-big);
   border-top-right-radius: rem($border-radius-big);
   :global(.dzq-tabs__bar.is-card) {
+    display: flex;
+    justify-content: space-between;
     box-shadow: none;
     padding-left: rem(4);
   }
   :global {
     .dzq-tabs__panel {
       border-top: 1px solid rgba(238, 238, 238, 0.75);
-
+      cursor: auto;
     }
     .dzq-tabs__item {
+      @include cursor-on-pc;
       justify-content: flex-start;
       flex: none;
       padding: 0 rem(12);
@@ -39,7 +42,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  margin: 0 rem(10);
+  margin: 0 rem(24);
   color: $text-color-secondary;
 }
 
