--- a/web/components/thread/user-item/index.module.scss
+++ b/web/components/thread/user-item/index.module.scss
@@ -34,7 +34,7 @@
       justify-content: center;
       align-items: center;
       position: absolute;
-      bottom: rem(-2);
+      bottom: rem(-4);
       right: rem(-4);
       border-radius: 50%;
       height: rem(20);
